# cyboto

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  base_component.cpp  base_component.h  base_components_manager.cpp  base_components_manager.h  base_function.cpp  base_function.h  common.h  consts.h  core.cpp  core.h  core.h.autosave  emergency_situation_manager.cpp  emergency_situation_manager.h  function.cpp  function.h  function.h.autosave  function_factory.cpp  function_factory.h  functions_manager.cpp  functions_manager.h  geom.h  main.cpp  parsers.cpp  parsers.h  physical_component.cpp  physical_component.h  physical_components_manager.cpp  physical_components_manager.h  signals_manager.cpp  signals_manager.h  trigger.h  trigger.h.autosave
